<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/back"
        android:textColor="@color/blue"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/h3"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/edtRestaurantName"
        android:layout_width="@dimen/_350sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_edt"
        android:ems="10"
        android:hint="@string/name_restaurant"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:imeOptions="flagNoFullscreen|actionDone"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="@dimen/_350sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRestaurantName">

        <EditText
            android:id="@+id/edtOwnerName"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/custom_edt"
            android:hint="@string/full_name"
            android:paddingStart="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_12sdp"
            android:imeOptions="flagNoFullscreen|actionDone"/>

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/custom_edt"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingLeft="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_12sdp"
            android:imeOptions="flagNoFullscreen|actionDone"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="@dimen/_350sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_edt"
        android:ems="10"
        android:hint="@string/email_registration"
        android:inputType="textEmailAddress"
        android:paddingLeft="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:imeOptions="flagNoFullscreen|actionDone"/>

    <EditText
        android:id="@+id/edtDistrict"
        android:layout_width="@dimen/_350sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_edt"
        android:ems="10"
        android:hint="@string/local"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/_10sdp"
        android:textColor="@color/blue"
        android:textColorHint="@color/gray"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:imeOptions="flagNoFullscreen|actionDone"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="@dimen/_350sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_btn_using"
        android:text="@string/registration"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDistrict" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/ic_public_24px" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/imageView3"
            android:text="@string/website"
            android:textColor="@color/blue"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_toEndOf="@+id/textView6"
            app:srcCompat="@drawable/ic_phone_in_talk_24px" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/imageView4"
            android:text="@string/phone"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>