<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/ic_public_24px" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/imageView3"
            android:text="@string/website"
            android:textColor="@color/blue"
            android:textSize="@dimen/_14sdp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_toEndOf="@+id/textView6"
            app:srcCompat="@drawable/ic_phone_in_talk_24px" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/imageView4"
            android:text="@string/phone"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/back"
        android:textColor="@color/blue"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_restaurant"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edt"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="@dimen/_190sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingEnd="@dimen/_10sdp"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/_12sdp"
            android:imeOptions="flagNoFullscreen|actionDone"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_btn_using"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>